border gap fix admin demo templates

--- a/scss/admin-options.scss
+++ b/scss/admin-options.scss
@@ -67,6 +67,7 @@
                 align-items: flex-end;
                 position: absolute;
                 top: 0;
+                left: -3px;
                 width: 100%;
                 height: 100%;
                 opacity: 0;
